--- a/src/index.html
+++ b/src/index.html
@@ -178,21 +178,21 @@
         </div>
     </div>
 </section>
-<section class="p-8 sm:p-16 lg:px-30 lg:pt-[98px] lg:pb-[70px] relative"></section>
+<section class="p-8 sm:p-16 lg:px-30 lg:pt-[98px] lg:pb-[70px] relative">
 <div class="container mx-auto flex flex-col md:flex-row items-center justify-center min-h-screen p-6">
     <div class="relative w-full md:w-1/2 flex justify-center md:justify-end mb-6 md:mb-0">
-        <div class="absolute inset-0 flex items-center justify-center">
+        <div class="absolute inset-20 flex items-center justify-center">
             <svg xmlns="http://www.w3.org/2000/svg" width="400" height="352" viewBox="0 0 497 352" fill="none">
                 <path
                     d="M0 8.80206C0 3.42838 5.19249 -0.417179 10.3327 1.14969L491.333 147.772C494.699 148.799 497 151.905 497 155.425V344C497 348.418 493.418 352 489 352H8.00001C3.58173 352 0 348.418 0 344V8.80206Z"
                     fill="#FED049" />
             </svg>
         </div>
-        <div class="absolute inset-0 flex items-center justify-center">
+        <div class="absolute -inset-96 flex items-center justify-center">
             <img class="" width="400" src="asset/ellipse3020.png" alt="">
         </div>
-        <div class="relative z-10">
-            <img alt="budi" class="" height="300" src="asset/budi.png" width="250" />
+        <div class="absolute -inset-20 flex items-center justify-center z-10">
+            <img alt="budi" class="" height="300" src="asset/budi.png" width="300" />
         </div>
     </div>
     <div class="w-full md:w-1/2 text-center md:text-left">
@@ -291,7 +291,7 @@
         </div>
     </div>
 </section>
-<footer class="bg-gray-900 text-white py-8">
+<footer class="bg-gray-900 text-white py-8 px-10">
     <div class="container mx-auto px-4">
         <div class="flex flex-col md:flex-row justify-between items-center">
             <div class="mb-4 md:mb-0">
